@@ -1,3 +1,9 @@
+2008-11-13  Masami Hiramatsu  <mhiramat@redhat.com>
+
+	PR7016
+	* utt.c (utt_trace_setup): Check freeram and bufferram before
+	allocating relay buffers for avoiding OOM.
+
 2008-11-12  Frank Ch. Eigler  <fche@elastic.org>
 
 	* transport.c (_stp_cleanup_and_exit): Move debug print into
